[package]
name = "functime"
version = "0.9.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_functime_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.21", features = ["abi3-py38", "extension-module"]}
pyo3-polars = {version = "0.13", features = ["derive"]}
polars = {version = "0.39", features = ["rolling_window", "fmt", "performant", "chunked_ids", "lazy", "zip_with", "random", "ndarray"]}
faer = {version = "0.18.2", features = ["nightly"]}
faer-ext = {version = "0.1.0", features = ["ndarray"]}
ndarray = "0.15.6"
serde = {version = "*", features=["derive"]}
hashbrown = {version = "0.14.2", features=["nightly"]}
numpy = "*"
