[metadata]
name = functime-client
author = IndexHub
description = Python client library for functime
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Homepage = https://functime.ai
keywords = functime, client, cloud, serverless, infrastructure
classifiers =
    Topic :: System :: Distributed Computing
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.11
install_requires =
    rich>=12.0.0
    toml
    typer>=0.6.1
    httpx
    polars
    pandas
    pyarrow
    pyjwt
    auth0-python

[options.extras_require]
test =
    converage[toml]
    pytest-benchmark
    pytest-memray
    pytest-timeout
    pytest
docs =
    mkdocs
    mkdocs-material
    mkdocstrings-python

[options.entry_points]
console_scripts =
    functime = functime.__main__:main
